# rbxts-bundler

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: cli.rs  lib.rs  logging.rs  main.rs
src/assets/: darklua.json  mod.rs  runtime.lua
src/assets/darklua/: dev-compat.json  dev.json  prod-compat.json  prod.json  rel-compat.json  rel.json
src/bundler/: escape.rs  minify.rs  mod.rs  traverse.rs  types.rs  writer.rs
src/templates/: mod.rs
tests/: cli_tests.rs  escape_tests.rs  integration_tests.rs  minify_tests.rs  templates_tests.rs  types_tests.rs
tests/fixtures/: build.rbxm
tests/output/: .gitkeep
